# greed-game

./: README.md
greed-spider/: GPLIST.csv  README.md  build.sh  pyproject.toml  sse-stock-line-spider.py
greed-spider/docker/: Dockerfile
greed-spider/greed_spider/: hello.py  main.py
spider/: sse-stock-line-spider.py
spider/utils/: sleep_util.py
