[project]
name = "greed-spider"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = [
    "requests>=2.32.3",
    "scrapy>=2.12.0",
]

[project.scripts]
hello = "greed_spider.hello:say_hello"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["greed_spider"]
